tests/baselines/reference/computedPropertyNames39_ES5(strict=true).errors.txt
computedPropertyNames39_ES5.ts(1,13): error TS7008: Member 'x' implicitly has an 'any' type.
computedPropertyNames39_ES5.ts(2,14): error TS7008: Member 'x' implicitly has an 'any' type.
computedPropertyNames39_ES5.ts(2,17): error TS7008: Member 'y' implicitly has an 'any' type.
computedPropertyNames39_ES5.ts(8,9): error TS2411: Property '[1 << 6]' of type 'Foo' is not assignable to 'number' index type 'Foo2'.


==== computedPropertyNames39_ES5.ts (4 errors) ====
    class Foo { x }
                ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    class Foo2 { x; y }
                 ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
                    ~
!!! error TS7008: Member 'y' implicitly has an 'any' type.
    
    class C {
        [s: number]: Foo2;
    
        // Computed properties
        get [1 << 6]() { return new Foo }
            ~~~~~~~~
!!! error TS2411: Property '[1 << 6]' of type 'Foo' is not assignable to 'number' index type 'Foo2'.
        set [1 << 6](p: Foo2) { }
    }